src/test/deca/context/invalid/homemade/wrong_cast.deca
// casting wrongly

class Ouaip {
    int x = 3;
}

class Ouaipp extends Ouaip {
    int y = 4;
}

class Nop {
}

{
    Ouaipp ouaipp = new Ouaipp();
    Ouaip ouaip = (Ouaip) (ouaipp);
    Object ouaippp = (Object) (ouaip);
    Object ouaipppp = (Object) (ouaippp);
    Ouaip ouaippppp = (Ouaip) (ouaipp);
    Nop nop = (Nop) (ouaipp);
    int a = 2;
    float b = (float) (a);
    if (ouaipp instanceof Ouaip) {
        println("yoyoyo");
    }
}